# botV6

./: .gitignore  BC CALC (4).xlsx  Pasted-2024-10-28-15-16-59-769-ExcelTransferBot-INFO-Application-startup-2024-10-28-15-16-59-769--1730128758999.txt  Pasted-import-streamlit-as-st-import-pandas-as-pd-import-openpyxl-import-shutil-import-datetime-import-1730049780944.txt  README.md  google_drive_service.py  main.py  pyproject.toml  requirements.txt  styles.css
.streamlit/: config.toml
