[project]
name = "repl-nix-botreplicator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.149.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "streamlit>=1.39.0",
    "google-auth-httplib2",
    "google-cloud-storage>=2.18.2",
]
