[tool.poetry]
name = "excel-data-transfer-bot"
version = "1.0.0"
description = "Excel Data Transfer Bot using Streamlit for CSV to Excel template automation"
authors = ["Excel Bot Team"]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0.0,!=3.9.7"
streamlit = "1.29.0"
pandas = "2.1.4"
openpyxl = "3.1.2"
google-auth = "2.25.2"
google-auth-oauthlib = "1.1.0"
google-auth-httplib2 = "0.1.1"
google-api-python-client = "2.111.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
